# NeuralAmpModelerCore

./: .gitignore  CMakeLists.txt
cmake/: coreConfig.cmake.in  namConfig.cmake.in
include/: CMakeLists.txt  dsp.h  lstm.h  version.h.in  wavenet.h
src/: CMakeLists.txt  get_dsp.cpp
